# owl_vit_detector

./: CMakeLists.txt  README.md  package.xml
launch/: owl_vit_launch.py
scripts/: owl_detector.py  torch_optimzation.py
src/: ricoh_theta_node.cpp  theta_node.cpp
